--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -15,6 +15,7 @@ $gold: #fff109;
 .section-header {
     margin: 2rem 0;
     color: #3f4145;
+    text-align: center;
 
     h2 {
         font-size: 2.25rem;
