--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -11,9 +11,11 @@ $gold: #fff109;
     justify-content: center;
     align-items: center;
 }
-
+.section-margin {
+    padding: 3rem 0;
+}
 .section-header {
-    margin: 2rem 0;
+    margin-bottom: 2rem;
     color: #3f4145;
     text-align: center;
 
