--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,7 +7,6 @@ body {
 
 nav {
     width: 100%;
-    min-height: 70px;
     // height: auto;
     background-color: #2b2b2b;
 
@@ -16,6 +15,7 @@ nav {
     z-index: 9;
 
     .container {
+        min-height: 70px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -24,52 +24,57 @@ nav {
             max-width: 300px;
         }
     }
-}
 
-.nav-box {
-    &, li {
-        @include center;
-    }
-
-    a,
-    a:visited,
-    a:hover,
-    a:active {
-        color: $ivory;
-    }
-
-    li>a {
-        padding: 0.2rem 0.8rem;
-
-        // margin-left: 1rem;
-        // max-height: 2rem;
-        // max-width: 6rem;
-        font-size: 1rem;
+    ul.nav-box {
         list-style: none;
-        font-weight: 700;
-        cursor: pointer;
-    }
-
-    //立即報名
-    li:nth-last-child(2)>a {
-        display: block;
-        padding: 0.25rem 1rem;
-        background-color: $gold;
-        font-weight: 800; //彌補視覺差
-        border-radius: 99rem;
-        transition: .4s;
 
         &,
-        &:visited {
-            text-decoration: none;
-            color: black;
+        &>li {
+            @include center;
         }
 
-        &:hover,
-        &:active {
-            background-color: #25D0FF;
-            //原版網站所用顏色
-            // color: #fff;
+        a,
+        a:visited,
+        a:hover,
+        a:active {
+            color: $ivory;
+        }
+
+        li {
+            padding: 0.2rem 0.8rem;
+
+            a {
+                vertical-align: middle;
+                font-weight: 700;
+                cursor: pointer;
+            }
+        }
+
+        //立即報名
+        li:nth-last-child(2)>a {
+            padding: 0.2rem 0.8rem;
+            display: block;
+            background-color: $gold;
+            font-weight: 800; //彌補視覺差
+            border-radius: 99rem;
+            transition: .4s;
+
+            &,
+            &:visited {
+                text-decoration: none;
+                color: black;
+            }
+
+            &:hover,
+            &:active {
+                background-color: #25D0FF;
+                //原版網站所用顏色
+                // color: #fff;
+            }
+        }
+
+        li:last-child img {
+            max-height: 35px;
         }
     }
 }
@@ -106,7 +111,7 @@ nav {
 }
 
 footer {
-    padding: 2rem 0 1rem;
+    padding: 1rem 0 ;
     background-color: #000;
     color: #fff;
 
