--- a/scss/_extra-course.scss
+++ b/scss/_extra-course.scss
@@ -4,6 +4,8 @@
     color: #fff;
 
     header {
+        text-align: center;
+
         h2 {
             font-size: 2.25rem;
         }
@@ -104,12 +106,15 @@
     0% {
         background-color: $green;
     }
+
     10% {
         background-color: $green;
     }
+
     90% {
         background-color: $gray;
     }
+
     100% {
         background-color: $gray;
     }
