圖片位址改為相對位置

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,5 @@
 body {
-    background: url("../assets/lead_bg.svg") center 0/cover fixed;
+    background: url("./assets/lead_bg.svg") center 0/cover fixed;
     font-family: 'Noto Sans TC', 'Roboto', "微軟正黑體", sans-serif;
     //原網站的字型設定，前兩者皆為 Google Font 資源所有。
     color: $black;
